Fix sharex link overflow on certain domain lengths

--- a/src/app/views/cp/settings/sidebar/sidebar-partials/styles.scss
+++ b/src/app/views/cp/settings/sidebar/sidebar-partials/styles.scss
@@ -126,6 +126,15 @@
         cursor: pointer;
         outline: none;
         text-transform: uppercase;
+    }
 
+    @media(max-width: 420px) {
+        .tokenLinkContainer {
+            flex-direction: column;
+
+            button {
+                width: 100%;
+            }
+        }
     }
 }
